working with touch interface

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <div class="keyarrangement-container">
         <span>key arrangement: </span>
         <select name="keyArrangement">
-          <option value="traditional" selected>Traditional</option>
+          <option value="low-to-high" selected>Low to High</option>
+          <option value="high-to-low" selected>High to Low</option>
           <option value="random">Random</option>
         </select>
       </div>
