random keyboard works now

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
           <option value="custom">Custom</option>
         </select>
       </div>
+
+      <div class="panic-container">
+        <button id="panic">Panic</button>
+      </div>
     </div>
   </body>
 </html>
